front/public/embed.css
#crawlchat-embed {
  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  border: none;
  z-index: 1000;
  opacity: 0;
  visibility: hidden;
  transition:
    opacity 0.2s ease,
    visibility 0.2s ease;
}

#crawlchat-embed.open {
  opacity: 1;
  visibility: visible;
}

#crawlchat-embed iframe {
  width: 100%;
  height: 100%;
  border: none;
  background: transparent;
  background-color: transparent;
  opacity: 1;
}

#crawlchat-ask-ai-button {
  position: fixed;
  bottom: 20px;
  right: 20px;
  padding: 8px 20px;
  border-radius: 20px;
  cursor: pointer;
  transition:
    scale 0.1s ease,
    opacity 0.3s ease;
  box-shadow: rgba(0, 0, 0, 0.1) 0px 2px 4px;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  z-index: 99;
}

#crawlchat-ask-ai-button.square {
  border-radius: 8px;
  padding: 8px 12px;
}

#crawlchat-ask-ai-button:hover {
  scale: 1.05;
}

#crawlchat-ask-ai-button img.logo {
  width: 32px;
  height: 32px;
}

#crawlchat-ask-ai-button.with-logo {
  border-radius: 10px;
}

#crawlchat-ask-ai-button.hidden {
  opacity: 0;
}

#crawlchat-ask-ai-button .tooltip {
  position: absolute;
  top: -10px;
  right: 0;
  transform: translateY(-100%);
  background-color: white;
  color: black;
  padding: 10px 14px;
  border-radius: 10px;
  border: 1px solid #e0e0e0;
  text-align: right;
  display: flex;
  white-space: nowrap;
  font-size: 14px;
}

:root {
}

#crawlchat-sidepanel {
  position: fixed;
  transition: all 0.2s ease;
  border-left: 1px solid #e0e0e0;
  overflow: hidden;
}

[data-theme="dark"] #crawlchat-sidepanel {
  border-left: 1px solid #222;
}

#crawlchat-sidepanel iframe {
  width: 100%;
  height: 100%;
  border: none;
  background: transparent;
  background-color: transparent;
  opacity: 1;
}

#crawlchat-sidepanel.hidden {
  display: none;
}

#crawlchat-sidepanel.mintlify {
  z-index: 25;
}

@media (max-width: 768px) {
  #crawlchat-sidepanel {
    border: none;
  }
}

